* FIX "set timestamp" from "save" must not include a justification (Bug #2178)
* FIX set cntrparam levels increment <base>, <factor> for logscale z (Bug #2183)
* FIX character pointtypes should inherit plot coloring like normal pointtypes
* FIX bad autoscaling of linked y2 axis (Bug #2186)
* FIX prevent infinite loop from unbounded interation in a non-data plot command
* FIX qt: suppress off-by-one ysize (Bug #1759)
* FIX cairo: suppress off-by-one ysize (Bug #1759)
* FIX gd: apply alpha to brushstroke lines (Bug #2117)
* FIX tikz: fixes to accommodate lua 5.3 and newer pgf
* FIX wxt: ExportToFile widget disabled in persist mode (Bug #2185)

Changes in 5.2.7
================
* NEW "set pm3d noclipcb" will skip drawing quadrangles with color < cbmin
* NEW pm terminal supports utf8, dashed lines, bold/italic text
* NEW imaginary component of array values is available to "using" in column 3
* NEW gnuplot --slow may help use of qt terminal with slow system font server
* CHANGE splot "with points pt 0" acts like "with dots"
* CHANGE (tikz) improved default interpretation of gnuplot arrowhead style
* CHANGE teach hidden3d to handle double-headed vectors (arrowstyle "heads")
* CHANGE "unset title" or "reset" resets all title properties to default
* CHANGE font names passed to enhanced text processing may be in quotes
* CHANGE cairo terminals accept fractional font sizes
* CHANGE "plot with table" does not output trailing field separator
* CHANGE better centering for clustered histograms
* CHANGE clear STATS_* variables before performing analysis
* CHANGE cairo, libgd, and svg terminals handle LT_NODRAW by not drawing at all
* CHANGE svg terminal clickable icons are in-line data rather than external refs
* CHANGE revise space allocated for ylabel; allow text justification for ylabel
* CHANGE reduce overhead, making it feasible to have 10^6 hypertext labels
* CHANGE heavily revised fig terminal
* FIX "plot with table" unnecessarily limited string column output to 60 chars 