@@ -21,18 +21,29 @@ set yrange [-0.5:6.5]
 set grid lt -1
 set cbrange [3:6]
 unset colorbox
+set style textbox opaque
 
 set multiplot layout 2,2
 
 set title "Full 7x7 matrix"
 plot $Matrix matrix with image
+
 set title "Subsample columns by every ::2::4"
+stats $Matrix every ::2::4 matrix noout
+set xlabel sprintf("%d x %d submatrix", STATS_size_x, STATS_size_y)
+set xlabel offset 0,1.5 boxed
 plot $Matrix every ::2::4 matrix with image
+
 set title "Subsample rows by every :::2::4"
+stats $Matrix every :::2::4 matrix noout
+set xlabel sprintf("%d x %d submatrix", STATS_size_x, STATS_size_y)
+set xlabel offset 0,1.5 boxed
 plot $Matrix every :::2::4 matrix with image
 set title "Sample alternate columns by every 2"
+
 set xtics 2
 set xrange [-1:7]
+unset xlabel
 plot $Matrix every 2 matrix with image
 
 unset multiplot
