@@ -421,6 +421,8 @@ df_binary_file_record_struct df_bin_record_reset = {
     {0, 0, 0},
     DF_TRANSLATE_DEFAULT,
     {0, 0, 0},
+
+    0, 0,	   /* submatrix size */
     NULL           /* data_memory */
 };
 
@@ -2451,6 +2453,17 @@ df_determine_matrix_info(FILE *fin)
 	df_bin_record[0].scan_dim[0] = nc;
 	df_bin_record[0].scan_dim[1] = nr;
 
+	/* Save submatrix size for stats */
+	if (set_every) {
+	    df_bin_record[0].submatrix_ncols
+		= 1 + ((GPMIN(lastpoint,nc-1)) - firstpoint) / everypoint;
+	    df_bin_record[0].submatrix_nrows
+		= 1 + ((GPMIN(lastline,nr-1)) - firstline) / everyline;
+	} else {
+	    df_bin_record[0].submatrix_ncols = nc;
+	    df_bin_record[0].submatrix_nrows = nr;
+	}
+
 	/* Reset counter file pointer. */
 	ierr = fseek(fin, 0L, SEEK_SET);
 	if (ierr < 0)
@@ -2515,6 +2528,10 @@ df_determine_matrix_info(FILE *fin)
 		    FPRINTF((stderr,"datafile.c:%d filtering (%d,%d) to (%d,%d)\n",
 				 __LINE__, nc, nr, df_xpixels, df_ypixels));
 		}
+
+		/* Save submatrix dimensions for stats */
+		df_bin_record[index].submatrix_ncols = df_xpixels;
+		df_bin_record[index].submatrix_nrows = df_ypixels;
 
 		/* This matrix is the one (and only) requested by name.	*/
 		/* Dummy up index range and skip rest of file.		*/
@@ -4779,10 +4796,16 @@ df_readbinary(double v[], int max)
 	    scan_size[0] = this_record->scan_dim[0];
 	    scan_size[1] = this_record->scan_dim[1];
 
-	    FPRINTF((stderr,"datafile.c:%d matrix dimensions %d x %d\n",
+	    if (df_xpixels == 0) {
+		/* df_xpixels and df_ypixels were corrected for ascii `matrix every`
+		 * but scan_size was not. For that case we must not overwrite here.
+		 * For binary matrix, df_xpixels is still 0.
+		 */
+		FPRINTF((stderr,"datafile.c:%d matrix dimensions %d x %d\n",
 			__LINE__, scan_size[1], scan_size[0]));
-	    df_xpixels = scan_size[1];
-	    df_ypixels = scan_size[0];
+		df_xpixels = scan_size[1];
+		df_ypixels = scan_size[0];
+	    }
 
 	    if (scan_size[0] == 0)
 		int_error(NO_CARET, "Scan size of matrix is zero");
